--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-lg-12">
         <form id="contactForm"
-          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
+          action="{{ site.form_post_url }}"
           novalidate="novalidate" method="POST">
           <!--name="sentMessage"-->
           <div class="row">
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-lg-12">
         <form id="contactForm"
-          action="https://formspree.io/{% if site.formspree_form_path %}{{ site.formspree_form_path }}{% else %}{{ site.email }}{% endif %}"
+          action="{{ site.form_post_url }}"
           novalidate="novalidate" method="POST">
           <!--name="sentMessage"-->
           <div class="row">
