Remove clients section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,5 +8,5 @@ layout: default
 {% include about.html %}
 {% comment %}{% include timeline.html %}{% endcomment %}
 {% comment %}{% include team.html %}{% endcomment %}
-{% include clients.html %}
+{% comment %}{% include clients.html %}{% endcomment %}
 {% include contact.html %}
