--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,9 @@
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
+  <!-- Google reCAPTCHA -->
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdfLkckAAAAAKDgp8HQrq3egHYPfoHX_p2HT-XV"></script>
+
   <!-- Custom fonts for this template -->
   <link href="assets/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
